overflow fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
     * {
         margin: 0;
         font-family: 'Poppins', sans-serif;
+        overflow-x: hidden;
     }
     
     header {
